2014-08-13  Steve Ellcey  <sellcey@mips.com>
	* crtstuff.c: Undef caddr_t.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@213931 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libgcc/ChangeLog
+++ b/libgcc/ChangeLog
@@ -1,3 +1,7 @@
+2014-08-13  Steve Ellcey  <sellcey@mips.com>
+
+	* crtstuff.c: Undef caddr_t.
+
 2014-12-19  Release Manager
 
 	* GCC 4.8.4 released.
