--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -11200,7 +11200,7 @@ is being compiled:
 @item -mbarrel-shifter
 @opindex mbarrel-shifter
 Generate instructions supported by barrel shifter.  This is the default
-unless @samp{-mcpu=ARC601} or @samp{-mcpu=arcem} is in effect.
+unless @samp{-mcpu=ARC601} is in effect.
 
 @item -mcode-density
 @opindex mcode-density
